Fix forum post content having lighter text color & fix image bg color overflow

--- a/app/assets/elements/page.scss
+++ b/app/assets/elements/page.scss
@@ -21,7 +21,7 @@
     font-size: var(--font-size-xxxl);
   }
 
-  p {
+  & > p {
     font-size: var(--font-size-m);
     color: var(--color-text-light);
   }
